[tool.poetry]
name = "Mircon"
version = "0.1.0"
description = ""
authors = ["Umix"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
nextcord = "^2.0.0-alpha.10"
Flask = "^2.1.1"
hypixel = "^0.8.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"